--- a/interactive-card-details-form-main/src/style.css
+++ b/interactive-card-details-form-main/src/style.css
@@ -187,18 +187,19 @@ button:hover{
 @media (max-width:800px) {
     .container{
         flex-direction: column;
-        justify-content: flex-start;
+       
+        justify-content: space-between;
         align-items: center;
         align-content: center;
         gap: 40px;
     }
     .container::before{
-        width: 100vw;
+        width: 100%;
         height: 30vh;
     }
     .credit-cards{
         /* margin-top: 30px; */
-
+        width: 90vw;
         position: relative;
         height: 45vh;
 
@@ -227,8 +228,7 @@ button:hover{
 @media (max-width:900px) {
     .front{
         font-size: 18px;
-        
-        
+    
     }
     
 }
