--- a/interactive-card-details-form-main/src/style.css
+++ b/interactive-card-details-form-main/src/style.css
@@ -154,17 +154,21 @@ input:focus{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    
 }
 .dates div {
     display: flex;
     flex-wrap: nowrap;
+    justify-content: flex-start;
     gap: 10px;
 }
 .year,.month{
     text-align: center;
     max-width: 10vw;
+    min-width: 50px;
 }
 #cvc{
+    min-width: 100px;
     
     max-width: 20vw;
     margin-top: 15px;
@@ -184,10 +188,9 @@ button:hover{
     opacity: .9;
 }
 
-@media (max-width:800px) {
+@media (max-width:767px) {
     .container{
         flex-direction: column;
-       
         justify-content: space-between;
         align-items: center;
         align-content: center;
@@ -203,6 +206,9 @@ button:hover{
         position: relative;
         height: 45vh;
 
+    }
+    .form{
+        max-width: 80vw;
     }
     .front,.back{
         font-size: 15px;
@@ -225,7 +231,7 @@ button:hover{
     
     }
 }
-@media (max-width:900px) {
+@media (min-width:767px) and (max-width:900px) {
     .front{
         font-size: 18px;
     
