--- a/ecommerce-product-page-main/src/style.css
+++ b/ecommerce-product-page-main/src/style.css
@@ -7,6 +7,7 @@
 }
 body{
     font-family: sans-serif;
+    position: relative;
     padding: 0;
 }
 .overlay{
@@ -329,7 +330,7 @@ body{
 }
 .product .slider-fullscreen{
     display: none;
-    max-width: 500px;
+    width: 450px;
 }
 .product .fullscreen{
     display: flex;
