--- a/ecommerce-product-page-main/src/norm.css
+++ b/ecommerce-product-page-main/src/norm.css
@@ -165,6 +165,11 @@ sup {
 img {
     border-style: none;
 }
+img::selection,
+svg::selection{
+    user-select: none;
+}
+
 
 /* Forms
      ========================================================================== */
