--- a/ecommerce-product-page-main/src/style.css
+++ b/ecommerce-product-page-main/src/style.css
@@ -143,22 +143,24 @@ body{
     
 
 }
-.navigation .cart{
+.navigation .profile .cart{
     position: relative;
 }
-.navigation .cart span{
-    display: none;
+.navigation .profile .cart p{
+    /* display: none; */
     position: absolute;
+    font-size: .8rem;
+    font-weight: 700;
     right: -9px;
-    top: -9px;
-    width: 1rem;
-    height: 1rem;
-    /* padding: 2px; */
+    top: -8px;
+    /* width: 1.3rem;
+    height: 1rem; */
+    padding: 0px 7px;
     text-align: center;
-    padding-bottom: 2px;
-    border-radius: 50%;
-    background-color: red;
-    color: black;
+    /* padding-bottom: 2px; */
+    border-radius: 1000px;
+    background-color: var(--orange);
+    color: white;
 
 }
 .navigation .cartList{
