ecommerce product page main add cart list

--- a/ecommerce-product-page-main/src/style.css
+++ b/ecommerce-product-page-main/src/style.css
@@ -147,7 +147,7 @@ body{
     position: relative;
 }
 .navigation .profile .cart p{
-    /* display: none; */
+    display: none;
     position: absolute;
     font-size: .8rem;
     font-weight: 700;
